# hla-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
components/button_handler/: CMakeLists.txt  button_handler.cpp
components/button_handler/include/: button_handler.h
components/circular_deque/include/: circular_deque.h
components/sh1106/: CMakeLists.txt  sh1106.cpp
components/sh1106/include/: sh1106.h
components/ssd1306/: CMakeLists.txt  ssd1306.cpp
components/ssd1306/include/: ssd1306.h
data/web_server/: index.html  server.js  style.css
flash_data/config/: wifi_info.json
flash_data/frontend/: index.html  server.js  style.css
flash_data/web_server/: server.js
include/: config_store.h  hla.h  hla_iface.h  web_server.h  wifi_info.h
main/: CMakeLists.txt  config_store.cpp  config_store.h  hla.cpp  hla.h  hla_iface.h  idf_component.yml  loom.cpp  loom.h  loom_iface.h  loom_info.cpp  loom_info.h  main.cpp  main_screen.cpp  main_screen.h  screen.cpp  screen.h  slider_controller.cpp  splash_screen.cpp  splash_screen.h  uart.cpp  web_server.cpp  web_server.h  wifi_info.cpp  wifi_info.h
main/include/: loom.h  loom_info.h  screen.h  slider_controller.h  uart.h  web_server.h
src/: config_store.cpp  hla.cpp  hla_main.cpp  web_server.cpp  wifi_info.cpp
